@@ -99,13 +99,9 @@ namespace MCDawn.Gui
                 s.OnError += newError;
                 s.OnSystem += newSystem;
 
-                new Thread(() => {
-                    Invoke(new Action(() => {
-                        foreach (TabPage tP in tabControl1.TabPages)
-                            tabControl1.SelectTab(tP);
-                        tabControl1.SelectTab(tabControl1.TabPages[0]);
-                    }));
-                }).Start();
+                foreach (TabPage tP in tabControl1.TabPages)
+                    tabControl1.SelectTab(tP);
+                tabControl1.SelectTab(tabControl1.TabPages[0]);
 
                 s.HeartBeatFail += HeartBeatFail;
                 s.OnURLChange += UpdateUrl;
